--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -98,7 +98,7 @@
                         {{#def.format: { n: leader.wagered, decimals: 0 } }} Bits
                     </td>
                     <td>
-                        {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered * 100), decimals: 0 } }} Bits
+                        {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered), decimals: 0 } }} Bits
 
                         {{?leader.wagered_rank > 15}}
                             -
