--- a/views/leaderboard.html
+++ b/views/leaderboard.html
@@ -5,7 +5,7 @@
 
     <h5 id="top">Top 20 players</h5>
     <hr>
-    <a href="/weekly-leaderboard"><strong>Weekly leaderboard Promotion</strong></a>
+    <a href="/weekly-leaderboard"><strong>Link to: Weekly leaderboard Promotion</strong></a>
     <hr>
     <table class="leaders">
         <thead>
