--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -52,9 +52,11 @@
     </table>
 
     <div class="success">
-        * This prize will be won by the player that holds this position 
+        This is a "rakeback" promotion, where the player with the highest amount
         <br>
-        on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
+        wagered gets 0.15% of his weekly wagered amount back, the second player 0.14%, ect ect.
+        <br>
+        Prizes will be paid out on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
         <br>
         Hint: This promo started in week 27, previous prices are not rewarded.
     </div>
