--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -56,9 +56,7 @@
         <br>
         wagered gets 0.15% of his weekly wagered amount back, the second player 0.14%, ect ect.
         <br>
-        Prizes will be paid out on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
-        <br>
-        Hint: This promo started in week 27, previous prices are not rewarded.
+        This weekly promotion ends on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
     </div>
 </div>
 #}}
