--- a/views/template/header.html
+++ b/views/template/header.html
@@ -21,10 +21,9 @@
                 <a href="/request">Faucet</a>
                 <a href="/weekly-leaderboard">Promotion</a>
                 <a href="/leaderboard">Leaderboard</a>
-                <a href="/stats">Stats</a>
-                <a href="/faq">FAQ   </a>
+                <a href="/faq">FAQ</a>
                 <div class="currency-selector">
-                    Change currency
+                    Currency
                     <div class="currencies">
                         <ul>
                             <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
