--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -46,7 +46,9 @@
                         {{#def.format: { n: leader.wagered, decimals: 0 } }} Bits
                     </td>
                     <td>
-                        {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered), decimals: 0 } }} Bits
+                        {{?leader.wagered_rank <= 15}}
+                            {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered), decimals: 0 } }} Bits
+                        {{?}}
 
                         {{?leader.wagered_rank > 15}}
                             -
