--- a/views/template/header.html
+++ b/views/template/header.html
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div class="account header-el dropdown-mode">
-        <a href="#">Change currency</a>
+        <a href="#">Currency</a>
         <span class="caret"></span>
         <ul class="dropdown">
           <li><a href="https://btc.tothemoon.me">BTC</a></li>
@@ -53,7 +53,6 @@
           <a href="/request">Faucet</a>
           <a href="/weekly-leaderboard">Promotion</a>
           <a href="/leaderboard">Leaderboard</a>
-          <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
           <a href="https://btc-old.tothemoon.me/play" style="
             color: orange;
@@ -70,6 +69,20 @@
           <li><a href="/register" class="button green">Register</a></li>
           <li><a href="/login" class="button">Login</a></li>
         </ul>
+        <div class="account header-el dropdown-mode">
+          <a href="#">Currency</a>
+          <span class="caret"></span>
+          <ul class="dropdown">
+            <li><a href="https://btc.tothemoon.me">BTC</a></li>
+            <li><a href="https://nxt.tothemoon.me">NXT</a></li>
+          </ul>
+        </div>
+         <div class="menu header-el">
+            <a href="https://btc-old.tothemoon.me/play" style="
+              color: orange;
+              border: 2px solid grey;
+              padding: 5px;">Switch Design</a>          
+        </div>
         <div class="menu header-el">
           <a href="/play">Play</a>
           <a href="/request">Faucet</a>
@@ -78,20 +91,6 @@
           <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
           </div>
-          <div class="account header-el dropdown-mode">
-        <a href="#">Change currency</a>
-        <span class="caret"></span>
-        <ul class="dropdown">
-          <li><a href="https://btc.tothemoon.me">BTC</a></li>
-          <li><a href="https://nxt.tothemoon.me">NXT</a></li>
-        </ul>
-      </div>
-       <div class="menu header-el">
-          <a href="https://btc-old.tothemoon.me/play" style="
-            color: orange;
-            border: 2px solid grey;
-            padding: 5px;">Switch Design</a>          
-      </div>
       
       </nav>
     {{?}}
