Update leaderboard and menu

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div class="account header-el dropdown-mode">
-        <a href="#">Change currency</a>
+        <a href="#">Currency</a>
         <span class="caret"></span>
         <ul class="dropdown">
           <li><a href="https://btc.tothemoon.me">BTC</a></li>
@@ -63,8 +63,6 @@
           <a href="/request">Faucet</a>
           <a href="/weekly-leaderboard">Promotion</a>
           <a href="/leaderboard">Leaderboard</a>
-          <a href="/stats">Stats</a>
-          <a href="/faq">FAQ</a>
           <a href="https://nxt-old.tothemoon.me/play" style="
             color: orange;
             border: 2px solid grey;
@@ -81,7 +79,7 @@
           <li><a href="/login" class="button">Login</a></li>
         </ul>
         <div class="account header-el dropdown-mode">
-          <a href="#">Change currency</a>
+          <a href="#">Currency</a>
           <span class="caret"></span>
           <ul class="dropdown">
             <li><a href="https://btc.tothemoon.me">BTC</a></li>
@@ -94,8 +92,6 @@
           <a href="/request">Faucet</a>
           <a href="/weekly-leaderboard">Promotion</a>
           <a href="/leaderboard">Leaderboard</a>
-          <a href="/stats">Stats</a>
-          <a href="/faq">FAQ</a>
           <a href="https://nxt-old.tothemoon.me/play" style="
             color: orange;
             border: 2px solid grey;
