--- a/views/index.html
+++ b/views/index.html
@@ -81,6 +81,7 @@
                 <nav>
                     <ul>
                         <li><a href="/faq">FAQ</a></li>
+                        <li><a href="/stats">Stats</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <li><a href="/leaderboard">Leaderboard</a></li>
                     </ul>
