--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -7,64 +7,14 @@
     &nbsp;
     <a href="/weekly-leaderboard?year={{=it.nextYear}}&week={{=it.nextWeek}}">Next &#xbb;</a>
     <hr>
-
-    <h6>Top Profit</h6>
-
-    <table class="leaders">
-        <thead>
-            <tr>
-                <td>
-                    Rank
-                </td>
-                <td>
-                    Player
-                </td>
-                <td class="ldb-net">
-                      Net Profit
-                </td>
-                <td>
-                    Prize
-                </td>
-            </tr>
-        </thead>
-        <tbody>
-
-            {{~it.net_leaders :leader:index}}
-                <tr>
-                    <td>
-                        {{=leader.net_rank}}
-                    </td>
-                    <td>
-                        <a href="/user/{{=leader.username}}">{{=leader.username}}</a>
-                    </td>
-                    <td>
-                        {{#def.format: { n: leader.net_profit, decimals: 0 } }} NXT
-                    </td>
-                    <td>
-                        {{?leader.net_rank == 1 }}
-                            500 NXT *
-                        {{?}}
-
-                        {{?leader.net_rank == 2 }}
-                            300 NXT *
-                        {{?}}
-
-                        {{?leader.net_rank == 3 }}
-                            200 NXT *
-                        {{?}}
-
-                        {{?leader.net_rank == 4 || leader.net_rank == 5}}
-                            -
-                        {{?}}
-                    </td>
-                </tr>
-            {{~}}
-
-        </tbody>
-    </table>
-
-    <h6>Top Wagered</h6>
-
+    <div class="success">
+        This is a "rakeback" promotion, where the player with the highest amount
+        <br>
+        wagered gets 0.15% of his weekly wagered amount back, the second player 0.14%, ect ect.
+        <br>
+        This weekly promotion ends on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
+    </div>
+    <hr>
     <table class="leaders">
         <thead>
             <tr>
@@ -96,19 +46,10 @@
                         {{#def.format: { n: leader.wagered, decimals: 0 } }} NXT
                     </td>
                     <td>
-                        {{?leader.wagered_rank == 1 }}
-                            1000 NXT *
+                        {{?leader.wagered_rank <= 15}}
+                            {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered), decimals: 0 } }} Bits
                         {{?}}
-
-                        {{?leader.wagered_rank == 2 }}
-                            600 NXT *
-                        {{?}}
-
-                        {{?leader.wagered_rank == 3 }}
-                            400 NXT *
-                        {{?}}
-
-                        {{?leader.wagered_rank == 4 || leader.wagered_rank == 5}}
+                        {{?leader.wagered_rank > 15}}
                             -
                         {{?}}
                     </td>
@@ -117,14 +58,6 @@
 
         </tbody>
     </table>
-
-    <div class="success">
-        * This prize will be won by the player that holds this position 
-        <br>
-        on Sunday 11:59 pm EDT of Week {{=it.week}} {{=it.year}}. 
-        <br>
-        Hint: This promo started in week 22, previous prices are not rewarded.
-    </div>
 </div>
 #}}
 
