Update leaderboard and menu

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
             <div class="columns large-10">
                 <ul class="inline-list right menu">
                     <li><a href="/faq">FAQ</a></li>
+                    <li><a href="/faq">Stats</a></li>
                     <li><a href="/contact">Contact</a></li>
                     <li><a href="/leaderboard">Top Players</a></li>
                 </ul>
