--- a/views/template/header.html
+++ b/views/template/header.html
@@ -22,10 +22,8 @@
                 <a href="/request">Faucet</a>
                 <a href="/weekly-leaderboard">Promotion</a>
                 <a href="/leaderboard">Leaderboard</a>
-                <a href="/stats">Stats</a>
-                <a href="/faq">FAQ   </a>
                 <div class="currency-selector">
-                     Change currency
+                     Currency
                      <div class="currencies">
                          <ul>
                              <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
@@ -42,10 +40,8 @@
                 <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
                 <a href="/weekly-leaderboard">Promotion</a>
                 <a href="/leaderboard">Leaderboard</a>
-                <a href="/stats">Stats</a>
-                <a href="/faq">FAQ</a>
                 <div class="currency-selector">
-                     Change currency
+                     Currency
                      <div class="currencies">
                          <ul>
                              <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
