--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -47,7 +47,7 @@
                     </td>
                     <td>
                         {{?leader.wagered_rank <= 15}}
-                            {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered), decimals: 0 } }}  Bits  ({{#def.format: { n: ((16-leader.wagered_rank)), decimals: 2} }}%)
+                            {{#def.format: { n: ((16 - leader.wagered_rank) * 0.0001 * leader.wagered), decimals: 0 } }}  Bits  <strong>({{#def.format: { n: ((16-leader.wagered_rank)), decimals: 2} }}%)</strong>
                         {{?}}
 
                         {{?leader.wagered_rank > 15}}
