Update libs and layout

--- a/views/index.html
+++ b/views/index.html
@@ -22,22 +22,22 @@
             </div>
 
             <div class="row features">
-                <div class="large-3 medium-6 column feature">
+                <div class="small-12 large-3 column feature">
                   <img src="img/icons/bullseye.svg" alt="Skill"/>
                   <h2>1% Skill</h4>
                   <p class="text">Anyone can board a rocket, but it takes <a href="/guide">skill</a> to be a real astronaut.</p>
                 </div>
-                <div class="large-3 medium-6 column feature">
+                <div class="small-12 large-3 column feature">
                   <img src="img/icons/clock.svg" alt="Real Time"/>
                   <h2>Real Time</h4>
                   <p class="text">Liftoff in T-minus 3..2.. Hurry! Next destination: moon.</p>
                 </div>
-                <div class="large-3 medium-6 column feature">
+                <div class="small-12 large-3 column feature">
                   <img src="img/icons/secure.svg" alt="Secure"/>
                   <h2>Provably Fair</h4>
                   <p class="text">All rocket launches are approved by NASA and <a href="faq#fair">Provably fair</a>.</p>
                 </div>
-                <div class="large-3 medium-6 column feature">
+                <div class="small-12 large-3 column feature">
                   <img src="img/icons/group.svg" alt="Social"/>
                   <h2>Be Social</h4>
                   <p class="text">We're all in the same rocket, so lets enjoy the ride together!</p>
@@ -52,6 +52,7 @@
                 <nav>
                     <ul>
                         <li><a href="https://github.com/TwinWinNerD/bustabit-webserver/tree/master-bitcoin">Source</a></li>
+                        <li><a href="/stats">Stats</a></li>
                         <li><a href="/faq">FAQ</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <li><a href="/leaderboard">Leaderboard</a></li>
