--- a/views/template/head.html
+++ b/views/template/head.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {{?it.table}}
         <link rel="stylesheet" href="/css/game.css" />
     {{??}}
