--- a/views/template/main.html
+++ b/views/template/main.html
@@ -58,6 +58,10 @@
         ga('send', 'pageview');
 
     </script>
+    <script type="text/javascript" src="lib/foundation/js/vendor/jquery.js"></script>
+    <script type="text/javascript" src="lib/foundation/js/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="lib/foundation/js/foundation.min.js"></script>
+    <script type="text/javascript">$(document).foundation();</script>
 
 
 
