--- a/views/template/main.html
+++ b/views/template/main.html
@@ -62,6 +62,7 @@
 
     </script>
     <script type="text/javascript" src="lib/foundation/js/vendor/jquery.js"></script>
+    <script type="text/javascript" src="lib/foundation/js/vendor/modernizr.js"></script>
     <script type="text/javascript" src="lib/foundation/js/foundation.min.js"></script>
     <script type="text/javascript">$(document).foundation();</script>
 
