--- a/views/template/head.html
+++ b/views/template/head.html
@@ -10,4 +10,5 @@
     {{??}}
         <link rel="stylesheet" href="/css/app.css" />
     {{?}}
+    <script type="text/javascript" src="lib/foundation/js/vendor/modernizr.js"></script>
 </head>
