--- a/views/template/main.html
+++ b/views/template/main.html
@@ -61,6 +61,9 @@
         ga('send', 'pageview');
 
     </script>
+    <script type="text/javascript" src="lib/foundation/js/vendor/jquery.js"></script>
+    <script type="text/javascript" src="lib/foundation/js/foundation.min.js"></script>
+    <script type="text/javascript">$(document).foundation();</script>
 
 
 
