--- a/client/css/header.css
+++ b/client/css/header.css
@@ -1,118 +1,151 @@
 .header {
-  height: 54px;
-  background: #292d35 url("/img/header-bg.png");
-  -webkit-box-shadow: inset 0 -1px 0 rgba(255,255,255,0.025), 0 1px 3px rgba(0,0,0,0.4);
-  box-shadow: inset 0 -1px 0 rgba(255,255,255,0.025), 0 1px 3px rgba(0,0,0,0.4);
-  position: relative;
-  zoom: 1;
+    height: 54px;
+    background: #292d35 url("/img/header-bg.png");
+    -webkit-box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.025), 0 1px 3px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.025), 0 1px 3px rgba(0, 0, 0, 0.4);
+    position: relative;
+    zoom: 1;
 }
+
 .header:before,
 .header:after {
-  content: "";
-  display: table;
+    content: "";
+    display: table;
 }
+
 .header:after {
-  clear: both;
+    clear: both;
 }
+
 .header .auth {
-  float: right;
+    float: right;
 }
+
 .header .auth li {
-  margin-left: 12px;
+    margin-left: 12px;
 }
+
 .header ul {
-  margin: 12px;
+    margin: 12px;
 }
+
 .header-el {
-  float: left;
-  margin: 8px;
+    float: left;
+    margin: 8px;
 }
 
 @media only screen and (max-width: 58.75em) {
-  .header-el {
-    float: none;
-    margin: 8px;
-  }
+    .header-el {
+        float: none;
+        margin: 8px;
+    }
 }
 
 .top-bar .name h1 {
-  float: left;
-  height: 30px;
-  width: 200px;
-  overflow: hidden;
-  text-indent: -999px;
-  margin: 8px;
-  background-image: url("/img/tothemoon-logo.png");
+    float: left;
+    height: 30px;
+    width: 200px;
+    overflow: hidden;
+    text-indent: -999px;
+    margin: 8px;
+    background-image: url("/img/tothemoon-logo.png");
 }
+
 .top-bar .name h1 a {
-  width: 100%;
+    width: 100%;
 }
 
 .top-bar-section li a.green {
-  background-color: #33ac0e !important;
+    background-color: #33ac0e !important;
 }
+
+.top-bar-section li a.green:hover {
+    background-color: #42c021 !important;
+    color: #fff !important;
+}
+
 .top-bar-section li a.grey {
-  background-color: #88909a !important;
+    background-color: #88909a !important;
+}
+
+.top-bar-section li a.grey:hover {
+    background-color: #2285a2 !important;
+    color: #fff !important;
 }
 
 .top-bar .name .coin {
-  float: left;
-  width: 36px;
-  height: 36px;
-  overflow: hidden;
-  margin: 4px;
-  background-image: url("/img/balance-icon.png");
+    float: left;
+    width: 36px;
+    height: 36px;
+    overflow: hidden;
+    margin: 4px;
+    background-image: url("/img/balance-icon.png");
 }
 
 .balance {
-  margin-left: 30px;
-  background: #1c1e25;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  padding: 0 15px 0 27px;
-  height: 30px;
-  line-height: 30px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  position: relative;
+    margin-left: 30px;
+    background: #1c1e25;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding: 0 15px 0 27px;
+    height: 30px;
+    line-height: 30px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
 }
+
 .balance:before {
-  content: "";
-  background-image: url("/img/balance-icon.png");
-  height: 36px;
-  width: 36px;
-  display: block;
-  position: absolute;
-  left: -18px;
-  top: -3px;
+    content: "";
+    background-image: url("/img/balance-icon.png");
+    height: 36px;
+    width: 36px;
+    display: block;
+    position: absolute;
+    left: -18px;
+    top: -3px;
 }
 
 .balance .amount {
-  color: #fff;
+    color: #fff;
 }
 
-.top-bar-section li:not(.has-form) a:not(.button):hover, .balance .amount:hover {
-  color: #c87629;
+.top-bar-section li:not(.has-form) a:not(.button):hover,
+.balance .amount:hover {
+    color: #c87629;
 }
 
-@media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
-  .balance:before {
-    background-image: url("/img/balance-icon@2x.png");
-    -webkit-background-size: 36px 36px;
-    -moz-background-size: 36px 36px;
-    background-size: 36px 36px;
-  }
+@media only screen and (min-width: 58.75em) {
+    .top-bar-section li: not(.has-form) a: not(.button) {
+        padding: 0 10px;
+    }
 }
+
+@media all and (-webkit-min-device-pixel-ratio: 1.5),
+(min--moz-device-pixel-ratio: 1.5),
+(-o-min-device-pixel-ratio: 1.5/1),
+(min-device-pixel-ratio: 1.5),
+(min-resolution: 138dpi),
+(min-resolution: 1.5dppx) {
+    .balance:before {
+        background-image: url("/img/balance-icon@2x.png");
+        -webkit-background-size: 36px 36px;
+        -moz-background-size: 36px 36px;
+        background-size: 36px 36px;
+    }
+}
+
 .balance .amount {
-  font-size: 18px;
-  font-weight: 600;
-  text-shadow: 0 1px 0 rgba(0,0,0,0.5);
+    font-size: 18px;
+    font-weight: 600;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
 }
+
 .balance .currency {
-  font-size: 13px;
-  margin-left: 5px;
-  color: #bbbcbd;
+    font-size: 13px;
+    margin-left: 5px;
+    color: #bbbcbd;
 }
