--- a/client/css/header.css
+++ b/client/css/header.css
@@ -79,6 +79,11 @@
     margin-left: 8px;
 }
 
+.top-bar-section .button:active {
+    top: 10px;
+    position: relative;
+}
+
 .top-bar-section li.action:last-child {
     margin-left: 8px;
     margin-right: 8px;
