--- a/views/template/header.html
+++ b/views/template/header.html
@@ -58,8 +58,8 @@ function logout() {
                     </ul>
                 </li>
                 {{??}}
-                <li class="action"><a href="/register" class="moon-button button green">Register</a></li>
-                <li class="action"><a href="/login" class="moon-button button grey">Login</a></li>
+                <li class="menu-action"><a href="/register" class="moon-button button green">Register</a></li>
+                <li class="menu-action"><a href="/login" class="moon-button button grey">Login</a></li>
                 {{?}}
             </ul>
         </section>
