--- a/client/css/app.css
+++ b/client/css/app.css
@@ -557,6 +557,29 @@ hr {
   font-weight: 500;
 }
 
+.footer nav ul li {
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+}
+
+.footer a {
+    color: #fff;
+}
+
+@media only screen and (max-width: 58.75em) {
+    .footer nav ul li {
+        display: block;
+        margin-top: 8px;
+    }
+}
+
+.footer nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .up-bt {
     font-size: 16px;
     font-weight: bold;
