--- a/client/css/header.css
+++ b/client/css/header.css
@@ -79,6 +79,10 @@
     margin-left: 8px;
 }
 
+.top-bar-section ul li > a {
+    font-weight: bold;
+}
+
 .top-bar-section .button:active {
     top: 10px;
     position: relative;
